--- a/config/app.properties
+++ b/config/app.properties
@@ -1,2 +1,7 @@
 BATCH_INTERVAL_IN_MILLIS=0
 VERBOSE_PER_MSG_COUNT=20000
+#unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
+MESSAGE_SIZE=1024
+MESSAGE_CONTENT=hello
+SENDER_CONFIG_FILE=saf.properties
+RECEIVER_CONFIG_FILE=jms.properties
