--- a/config/app.properties
+++ b/config/app.properties
@@ -1,15 +1,12 @@
 BATCH_INTERVAL_IN_MILLIS=0
-MESSAGE_TYPE=file
+MESSAGE_TYPE=string
 MESSAGE_FILENAME=/Users/gniu/Temp/3k.txt
-#unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
+# unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
 MESSAGE_SIZE=1024
 MESSAGE_CONTENT=hello
 SENDER_CONFIG_FILE=jms.properties
 RECEIVER_CONFIG_FILE=jms.properties
-
-#TODO:The compression threshold value can be set to zero or higher. Setting it to zero will cause every message body to be compressed.
-COMPRESSION_THRESHOLD=-1
-#NON_PERSISTENT=1, PERSISTENT=2
+# NON_PERSISTENT=1, PERSISTENT=2
 DELIVERY_MODE=1
-SENDER_THREADS=5
-CLEANER_THREADS=10
+SENDER_THREADS=20
+CLEANER_THREADS=20
