--- a/config/jms.properties
+++ b/config/jms.properties
@@ -1,6 +1,6 @@
 PRINCIPAL=weblogic
 CREDENTIAL=welcome1
-PROVIDER_URL=t3://localhost:7001
+PROVIDER_URL=t3://192.168.31.174:7001
 CONNECTION_FACTORY=democf
 DESTINATION=queue1
 
