--- a/config/app.properties
+++ b/config/app.properties
@@ -1,5 +1,5 @@
 BATCH_INTERVAL_IN_MILLIS=0
-MESSAGE_TYPE=string
+MESSAGE_TYPE=file
 MESSAGE_FILENAME=/Users/gniu/Temp/3k.txt
 # unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
 MESSAGE_SIZE=1024
@@ -9,4 +9,4 @@ RECEIVER_CONFIG_FILE=jms.properties
 # NON_PERSISTENT=1, PERSISTENT=2
 DELIVERY_MODE=1
 SENDER_THREADS=20
-CLEANER_THREADS=20
+STORE_PATH=/Users/gniu/Dropbox/Workspaces/jms-saf-demo/store
