--- a/config/app.properties
+++ b/config/app.properties
@@ -4,9 +4,8 @@ MESSAGE_FILENAME=/Users/gniu/Temp/3k.txt
 # unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
 MESSAGE_SIZE=1024
 MESSAGE_CONTENT=hello
-SENDER_CONFIG_FILE=jms.properties
+SENDER_CONFIG_FILE=saf.properties
 RECEIVER_CONFIG_FILE=jms.properties
 # NON_PERSISTENT=1, PERSISTENT=2
 DELIVERY_MODE=1
-SENDER_THREADS=20
-STORE_PATH=/Users/gniu/Dropbox/Workspaces/jms-saf-demo/store
+SENDER_THREADS=5
