--- a/config/jms.properties
+++ b/config/jms.properties
@@ -2,5 +2,5 @@ PRINCIPAL=weblogic
 CREDENTIAL=welcome1
 PROVIDER_URL=t3://localhost:7001
 CONNECTION_FACTORY=democf
-DESTINATION=queue1
+DESTINATION=demoqueue
 
