--- a/config/saf.properties
+++ b/config/saf.properties
@@ -2,4 +2,4 @@ PRINCIPAL=weblogic
 CREDENTIAL=welcome1
 PROVIDER_URL=file:////Users/gniu/Dropbox/Workspaces/jms-saf-demo/config/ClientSAF.xml
 CONNECTION_FACTORY=democf
-DESTINATION=queue1
+DESTINATION=demoqueue
