add monitor cmd

--- a/config/app.properties
+++ b/config/app.properties
@@ -10,3 +10,5 @@ RECEIVER_CONFIG_FILE=jms.properties
 DELIVERY_MODE=1
 SENDER_THREADS=5
 FILE_STORE_PATH=/Users/gniu/Temp/store
+#MONITOR=me.yekki.jmx.monitor.JMSMonitor.printAmountOfMessagesInDestination:AdminServer_DemoJMSServer_DemoSystemModule!DemoQueue
+MONITOR=me.yekki.jmx.monitor.JMSMonitor.printConnectedJMSClients:AdminServer
