add desc to sender

--- a/config/app.properties
+++ b/config/app.properties
@@ -1,5 +1,5 @@
 BATCH_INTERVAL_IN_MILLIS=0
-MESSAGE_TYPE=file
+MESSAGE_TYPE=File
 MESSAGE_FILENAME=/Users/gniu/Temp/3k.txt
 # unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
 MESSAGE_SIZE=1024
@@ -8,7 +8,7 @@ SENDER_CONFIG_FILE=jms.properties
 RECEIVER_CONFIG_FILE=jms.properties
 # NON_PERSISTENT=1, PERSISTENT=2
 DELIVERY_MODE=1
-SENDER_THREADS=5
+SENDER_THREADS=10
 FILE_STORE_PATH=/Users/gniu/Temp/store
 MONITOR=me.yekki.jmx.monitor.JMSMonitor.printAmountOfMessagesInDestination:AdminServer_DemoJMSServer_DemoSystemModule!DemoQueue
 #MONITOR=me.yekki.jmx.monitor.JMSMonitor.printConnectedJMSClients:AdminServer
