--- a/config/app.properties
+++ b/config/app.properties
@@ -4,11 +4,13 @@ MESSAGE_FILENAME=/Users/gniu/Temp/3k.txt
 # unit is kb, if the value is -1, it means message type is String and value is set in MESSAGE_CONTENT.
 MESSAGE_SIZE=1024
 MESSAGE_CONTENT=hello
-SENDER_CONFIG_FILE=jms.properties
+SENDER_CONFIG_FILE=saf.properties
 RECEIVER_CONFIG_FILE=jms.properties
 # NON_PERSISTENT=1, PERSISTENT=2
 DELIVERY_MODE=1
-SENDER_THREADS=10
+SENDER_THREADS=5
 FILE_STORE_PATH=/Users/gniu/Temp/store
-MONITOR=me.yekki.jmx.monitor.JMSMonitor.printAmountOfMessagesInDestination:AdminServer_DemoJMSServer_DemoSystemModule!DemoQueue
+#MONITOR_1=me.yekki.jmx.monitor.JMSMonitor.printConnectedJMSClients:AdminServer
+MONITOR_2=me.yekki.jmx.monitor.JMSMonitor.printAmountOfMessagesInDestination:AdminServer_DemoJMSServer_DemoSystemModule!DemoQueue
+
 #MONITOR=me.yekki.jmx.monitor.JMSMonitor.printConnectedJMSClients:AdminServer
